--- a/index.html
+++ b/index.html
@@ -22,25 +22,28 @@
         </a>
     </div>
     <ul class="nav-links">
-        <li class="link"><a href="#">About</a></li>
+        <li class="link"><a href="#">About Us</a></li>
         <li class="link"><a href="#">Location</a></li>
         <li class="link"><a href="#">Contact</a></li>
     </ul>
 </nav>
 <header class="hero-section">
     <h1>Ice And Cream Gellato Shop </h1>
-    <a href="https://www.foodnetwork.com/restaurants/photos/50-states--50-scoops"> Gallery</a>
 </header>
 <main>
     <section class="hero-text">
         <h2> the history of the company (pegar no 1o site)</h2>
     </section>
+    <div class="gallery">
+        <a href="https://www.foodnetwork.com/restaurants/photos/50-states--50-scoops"> Gallery</a>
+    </div>
     <article>
-        <header>
-            <h2>Contact Us</h2>
-        </header>
+        <div>
+            <h3>Contact Us</h3>
+        </div>
         <div>*****inserir form****</div>
     </article>
+
 </main>
 <footer>&copy;Ice And Cream Gellato Shop 2021</footer>
 
