--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@500&display=swap" rel="stylesheet">
 
 </head>
 <nav>
@@ -32,7 +35,11 @@
 </header>
 <main>
     <section class="hero-text">
-        <h2> the history of the company (pegar no 1o site)</h2>
+        <h2>
+            <p>We are lovely family owned ice cream shop since 1995. Our main goal is make the little kids happy and having an unforgettable icecream. We are located in a lovely community in NW Calagry, Alberta.</p>
+            <p>Ice cream recipe came to North America 250 years after it was discovered by Christopher Columbus. The most popular flavor of ice cream is vanilla. After it come chocolates, strawberry, cookies n' cream, and others. Ice cream cones were invented
+                during 1904 World's Fair in St.</p>
+        </h2>
     </section>
     <div class="gallery">
         <a href="https://www.foodnetwork.com/restaurants/photos/50-states--50-scoops"> Gallery</a>
