icon and hero image fixed

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <nav>
     <div class="logo">
         <a href="#">
-            <img src="/assets/images/icons8-ice-cream-64.png" alt="icons8">
+            <img src="https://img.icons8.com/external-flatart-icons-lineal-color-flatarticons/64/000000/external-ice-cream-summer-flatart-icons-lineal-color-flatarticons.png" alt="icons8"></img>
         </a>
     </div>
     <ul class="nav-links">
